--- a/release/docker-compose.yml
+++ b/release/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   rienkun:
-    image: docker.pkg.github.com/fcapovilla/rienkun/rienkun:latest
+    image: ghcr.io/fcapovilla/rienkun:latest
     environment:
       MIX_ENV: prod
       HOST: localhost
